# plotjuggler_core

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build.sh  conanfile.py  conanfile.txt  install_qt6.sh  porting_plugins_plan.md  rename_carefully.py  rename_functions_only.py  rename_to_camel.py  rename_with_clang.py  run_clang_tidy.sh  test.sh  test_sdk_install.sh
data/: CMakeLists.txt  architecture_overview.md  conanfile.txt  dag-plan.md  data_implementation_plan.md  plotjuggler_siso_mimo_analysis.md  run_benchmark.sh
data/base/src/: type_tree.cpp
data/benchmarks/: ingest_benchmark.cpp  read_benchmark.cpp
data/engine/src/: arrow_import.cpp  buffer.cpp  builtin_transforms.cpp  chunk.cpp  column_buffer.cpp  derived_engine.cpp  encoding.cpp  engine.cpp  query.cpp  reader.cpp  topic_storage.cpp  type_registry.cpp  writer.cpp
data/examples/: parquet_import.cpp
data/include/pj/engine/: chunk.hpp  (+3 more)
data/src/: chunk.cpp  engine.cpp  query.cpp  type_tree.cpp
data/tests/: array_expansion_test.cpp  arrow_import_test.cpp  buffer_test.cpp  chunk_test.cpp  column_buffer_test.cpp  derived_engine_test.cpp  encoding_test.cpp  engine_integration_test.cpp  expected_test.cpp  query_test.cpp  span_test.cpp  topic_storage_test.cpp  type_registry_test.cpp  type_tree_test.cpp  types_test.cpp
pj_base/: CMakeLists.txt
pj_base/include/pj_base/: assert.hpp  buffer_anchor.hpp  builtin_object_abi.h  canonical_object_abi.h  data_source_protocol.h  dataset.hpp  diagnostic_sink.hpp  expected.hpp  message_parser_protocol.h  plugin_abi_export.h  plugin_abi_export.hpp  plugin_data_api.h  span.hpp  toolbox_protocol.h  type_tree.hpp  types.hpp
pj_base/proto/pj/: CircleAnnotation.proto  Color.proto  FrameTransform.proto  FrameTransforms.proto  Geometry.proto  ImageAnnotations.proto  KeyValuePair.proto  PointCloud.proto  PointsAnnotation.proto  README.md  SceneEntities.proto  TextAnnotation.proto
pj_base/src/: type_tree.cpp
pj_base/src/builtin/: camera_info_codec.cpp  frame_transforms_codec.cpp  geometry_codec.hpp  image_annotations_codec.cpp  image_annotations_decoder.cpp  protobuf_wire.h  protobuf_wire.hpp  scene_entities_codec.cpp
pj_base/tests/: abi_layout_sentinels_test.cpp  arrow_holders_test.cpp  builtin_object_test.cpp  data_source_plugin_base_test.cpp  data_source_protocol_test.cpp  expected_test.cpp  frame_transforms_codec_test.cpp  image_annotations_codec_test.cpp  image_annotations_decoder_test.cpp  media_metadata_test.cpp  message_parser_plugin_base_test.cpp  object_ingest_policy_test.cpp  platform_test.cpp  plugin_data_api_test.cpp  push_message_v2_test.cpp  scene_entities_codec_test.cpp  span_test.cpp  type_tree_test.cpp  types_test.cpp
pj_marketplace/: CMakeLists.txt  main.cpp
pj_marketplace/documentation/: ARCHITECTURE.md  PLAN.md  REQUIREMENTS.md  USER_MANUAL.md  plotjuggler-marketplace-spec-v1.0.0-en.md
pj_marketplace/include/pj_marketplace/: extension_manager.hpp  marketplace_window.hpp  registry_manager.hpp
pj_marketplace/src/core/: ExtensionManager.cpp  ExtensionManager.h  RegistryManager.cpp  RegistryManager.h
pj_marketplace/src/ui/: marketplace_window.cpp
pj_marketplace/tests/: extension_manager_test.cpp  registry_manager_test.cpp
pj_media/pj_marker_protocol/: CMakeLists.txt
pj_media/pj_marker_protocol/src/: image_annotation_codec.cpp
pj_media/pj_marker_protocol/tests/: image_annotation_codec_test.cpp
pj_media/pj_media_core/: CMakeLists.txt
pj_media/pj_media_core/src/: codec_pipeline.cpp  codecs.cpp  ffmpeg_backend.cpp  ffmpeg_decoder.cpp  image_decoder.cpp  image_pipeline_source.cpp  scene_decoder.cpp  scene_decoder_cdr.cpp  scene_decoder_protobuf.cpp  streaming_video_decoder.cpp  thumbnail_cache.cpp
pj_media/pj_media_core/tests/: dual_store_test.cpp  ffmpeg_backend_test.cpp  ffmpeg_decoder_test.cpp  image_decoder_test.cpp  mcap_integration_test.cpp  scene_decoder_test.cpp  scene_frame_test.cpp  scene_pipeline_source_test.cpp  streaming_video_decoder_test.cpp  test_mp4_demux.h
pj_media/pj_media_qt/: CMakeLists.txt
pj_media/pj_media_qt/shaders/: scene_quads.vert.qsb  scene_text.frag  scene_text.frag.qsb  scene_text.vert  scene_text.vert.qsb  shaders.qrc
pj_media/pj_media_qt/src/: media_viewer_widget.cpp
pj_plugins/: CMakeLists.txt
pj_plugins/dialog_protocol/: CMakeLists.txt
pj_plugins/dialog_protocol/examples/: mock_dialog.cpp  mock_streamer.cpp
pj_plugins/dialog_protocol/src/: dialog_engine.cpp  dialog_library.cpp  widget_binding.cpp
pj_plugins/dialog_protocol/tests/: dialog_engine_test.cpp  dialog_handle_test.cpp  dialog_library_test.cpp  dialog_plugin_typed_test.cpp  missing_dialog_abi_plugin.cpp  missing_dialog_required_slots_plugin.cpp  plugin_lifecycle_test.cpp  widget_data_test.cpp  widget_data_view_test.cpp  widget_event_builder_test.cpp  widget_event_test.cpp
pj_plugins/docs/: ARCHITECTURE.md  PLAN.md  REQUIREMENTS.md  data-source-guide.md  dialog-plugin-guide.md  message-parser-guide.md  old_pj_plugins.md  plotjuggler-plugin-plan.md  toolbox-guide.md
pj_plugins/examples/: mock_data_source.cpp  mock_file_source.cpp  mock_json_parser.cpp  mock_media_parser.cpp  mock_schema_parser.cpp  mock_source_with_dialog.cpp  mock_toolbox.cpp
pj_plugins/src/: data_source_library.cpp  message_parser_library.cpp  plugin_catalog.cpp  plugin_runtime_catalog.cpp  toolbox_library.cpp
pj_plugins/src/detail/: library_loader.hpp  vtable_validation.cpp  vtable_validation.hpp
pj_plugins/tests/: data_source_library_test.cpp  delegated_ingest_integration_test.cpp  file_source_integration_test.cpp  invalid_optional_manifest_data_source_plugin.cpp  legacy_macro_dialog_plugin.cpp  message_parser_library_test.cpp  missing_id_data_source_plugin.cpp  missing_required_slots_plugin.cpp  mock_data_source_v2_plugin.cpp  object_ingest_policy_test.cpp  plugin_catalog_test.cpp  source_dialog_integration_test.cpp  toolbox_plugin_test.cpp
plugins/dialog_protocol/: CMakeLists.txt
plugins/dialog_protocol/src/: dialog_engine.cpp  widget_binding.cpp
plugins/dialog_protocol/tests/: dialog_engine_test.cpp
(+319 files in other folders)
